# ece5532_project_ideas

./: LICENSE  README.md
audibot_acc/: CMakeLists.txt  README.md  package.xml
audibot_acc/launch/: run_simulation.launch  spawn_audibot.launch
audibot_acc/rviz/: audibot_acc.rviz
audibot_acc/urdf/: ego_vehicle.urdf.xacro  long_range_lidar.urdf.xacro  target_vehicle.urdf.xacro
audibot_acc/worlds/: oval_world.world
audibot_urban_nav/: CMakeLists.txt  README.md  intersection_coordinates.csv  package.xml
audibot_urban_nav/launch/: run_simulation.launch  spawn_audibot.launch
audibot_urban_nav/rviz/: audibot_urban_nav.rviz
audibot_urban_nav/urdf/: audibot.urdf.xacro
audibot_urban_nav/worlds/: urban_world.world
igvc_bag_processing/: CMakeLists.txt  README.md  package.xml
igvc_bag_processing/include/igvc_bag_processing/: PinholeGeometry.hpp
igvc_bag_processing/launch/: start_system.launch
igvc_bag_processing/rviz/: sensor_viz.rviz
igvc_bag_processing/src/: PinholeGeometry.cpp  pinhole_geometry_example.cpp
igvc_sim/: README.md
self_balancing_control/: CMakeLists.txt  README.md  package.xml
self_balancing_control/launch/: run_simulation.launch
