<?xml version="1.0"?>
<package format="2">
  <name>audibot_acc</name>
  <version>0.0.0</version>
  <description>
    Adaptive cruise control project starting point
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audibot_path_following</exec_depend>

</package>
