<?xml version="1.0"?>
<package format="2">
  <name>igvc_bag_processing</name>
  <version>0.0.0</version>
  <description>
    Starting point for developing an IGVC perception system using bag data
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>image_geometry</depend>

</package>
