<?xml version="1.0"?>
<package format="2">
  <name>self_balancing_control</name>
  <version>0.0.0</version>
  <description>
    Self-balancing robot control starting point
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>teeterbot</exec_depend>

</package>
